fix upload to different locations in folder contents and some spacing issues

--- a/mockup/patterns/upload/less/pattern.upload.less
+++ b/mockup/patterns/upload/less/pattern.upload.less
@@ -24,11 +24,15 @@
         .controls{
             margin-top: 10px;
             padding-top: 10px;
+            clear: both;
         }
         .previews{
-            margin-top: 2em;
-            .item{ padding: 5px 0; }
-            .title{ padding-left: 0; }
+            margin-top: 4em;
+            .item{
+                padding: 5px 0;
+                clear: both;
+            }
+            .title{ padding-left: 3px; }
             .info img {
                 width: 32px;
                 height: 32px;
